# sandbox-duckdb

./: README.md
sandbox/: .gitattributes  README.md  pyproject.toml
sandbox/resources/sample-data/ebi/E-GEOD-100618/: E-GEOD-100618.aggregated_filtered_counts.mtx_cols  E-GEOD-100618.aggregated_filtered_counts.mtx_rows  E-GEOD-100618.aggregated_filtered_counts_matrix.mtx  clusters.tsv
sandbox/resources/sample-data/ebi/E-GEOD-100618/louvain/: E-GEOD-100618_Platform_hsapiens_DevelopmentalStage_1_Tissue_0_124_cells.tsv  E-GEOD-100618_Platform_hsapiens_DevelopmentalStage_1_Tissue_0_124_matrix.mtx  E-GEOD-100618_Platform_hsapiens_DevelopmentalStage_1_Tissue_1_86_cells.tsv  E-GEOD-100618_Platform_hsapiens_DevelopmentalStage_1_Tissue_1_86_matrix.mtx  E-GEOD-100618_Platform_hsapiens_DevelopmentalStage_1_Tissue_2_84_cells.tsv  E-GEOD-100618_Platform_hsapiens_DevelopmentalStage_1_Tissue_2_84_genes.tsv  (+5 more)
sandbox/resources/sample-data/ebi/E-GEOD-106540/: E-GEOD-106540.aggregated_filtered_counts.mtx_cols  E-GEOD-106540.aggregated_filtered_counts.mtx_rows  E-GEOD-106540.aggregated_filtered_counts_matrix.mtx  clusters.tsv
sandbox/resources/sample-data/ebi/E-GEOD-76312/: E-GEOD-76312.aggregated_filtered_counts.mtx_cols  E-GEOD-76312.aggregated_filtered_counts.mtx_rows  E-GEOD-76312.aggregated_filtered_counts_matrix.mtx  clusters.tsv
sandbox/resources/sample-data/ebi/centroids/: EBI_louvain_centroids.tsv  EBI_louvain_scBeacon_result_membership.tsv  gene_id_converter_table.tsv
sandbox/sandbox/: expression.py
sandbox/tests/: test_load.py
sandbox/toolbox/: test_load  test_query
(+32 files in other folders)
