[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Aldrin Montana <octalene.dev@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^0.6.1"
pyarrow = "^11.0.0"
ibis-framework = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
